Fix ::part(foo):hover https://bugs.webkit.org/show_bug.cgi?id=232301

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-shadow-parts/interaction-with-nested-pseudo-class-expected.html: Added.
* web-platform-tests/css/css-shadow-parts/interaction-with-nested-pseudo-class.html: Added.
* web-platform-tests/css/css-shadow-parts/invalidation-part-pseudo-expected.txt: Added.
* web-platform-tests/css/css-shadow-parts/invalidation-part-pseudo.html: Added.
* web-platform-tests/css/css-shadow-parts/part-nested-pseudo-expected.html: Added.
* web-platform-tests/css/css-shadow-parts/part-nested-pseudo.html: Added.
* web-platform-tests/css/css-shadow-parts/w3c-import.log:

Source/WebCore:

We fail to match on shadow tree border if the right side of ::part() has other selectors.

Tests: imported/w3c/web-platform-tests/css/css-shadow-parts/invalidation-part-pseudo.html

* css/CSSSelector.cpp:
(WebCore::CSSSelector::selectorText const):
* css/CSSSelector.h:

Add a new ShadowPartDescendant relation type that behaves like the existing ShadowDescendant relation
except it is only used for ::part.

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matchRecursively const):

We can now identify the ::part case easily from the relation type.

(WebCore::canMatchHoverOrActiveInQuirksMode):
* css/SelectorFilter.cpp:
(WebCore::collectSelectorHashes):
* css/parser/CSSParserSelector.h:
(WebCore::CSSParserSelector::hasShadowDescendant const): Deleted.
* css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParser::splitCompoundAtImplicitShadowCrossingCombinator):

Use ShadowPartDescendant as appropriate.

* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::fragmentRelationForSelectorRelation):
(WebCore::SelectorCompiler::constructFragmentsInternal):
* style/RuleFeature.cpp:
(WebCore::Style::RuleFeatureSet::computeNextMatchElement):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/243542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284865 268f45cc-cd09-0410-ab3c-d52691b4dbfc